--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/M3gnow/ms-challenge-process-file/issues"
   },
-  "homepage": "https://github.com/M3gnow/ms-challenge-process-file#readme"
+  "homepage": "https://github.com/M3gnow/ms-challenge-process-file#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "8.2",
+    "express": "^4.17.1",
+    "moment-timezone": "^0.5.33"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
